FIX: modify for language translation
Change-Id: I4a4123acef77fa992884cdf3420ac38bc13d8f7b

--- a/bbl/i18n/en/BambuStudio_en.po
+++ b/bbl/i18n/en/BambuStudio_en.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-08-19 14:51+0800\n"
+"POT-Creation-Date: 2022-08-24 18:21+0800\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -2854,6 +2854,12 @@ msgstr "You'd better upgrade your software.\n"
 msgid "Newer 3mf version"
 msgstr "Newer 3mf version"
 
+#, c-format, boost-format
+msgid ""
+"The 3mf's version %s is newer than %s's version %s, Suggest to upgrade your "
+"software.\n"
+msgstr ""
+
 msgid "The 3mf is not compatible, load geometry data only!"
 msgstr ""
 
@@ -3534,6 +3540,15 @@ msgid "Delete this preset"
 msgstr "Delete this preset"
 
 msgid ""
+"Prime tower is required by timeplase. Are you sure you want to disable both "
+"of them?"
+msgstr ""
+
+msgid ""
+"Prime tower is required by timelapse. Do you want to enable both of them?"
+msgstr ""
+
+msgid ""
 "When recording timelapse without toolhead, it is recommended to add a "
 "\"Timelapse Wipe Tower\" \n"
 "by right-click the empty position of build plate and choose \"Add Primitive"
@@ -3675,6 +3690,14 @@ msgstr ""
 "This is the bed temperature when the high temperature plate is installed. A "
 "value of 0 means the filament does not support printing on the High Temp "
 "Plate."
+
+msgid "Textured PEI Plate"
+msgstr ""
+
+msgid ""
+"Bed temperature when Textured PEI Plate is installed. Value 0 means the "
+"filament does not support to print on the Textured PEI Plate"
+msgstr ""
 
 msgid "Volumetric speed limitation"
 msgstr "Volumetric speed limitation"
@@ -4695,6 +4718,11 @@ msgstr ""
 "This is the bed temperature for layers except for the initial one. A value "
 "of 0 means the filament does not support printing on the High Temp Plate."
 
+msgid ""
+"Bed temperature for layers except the initial one. Value 0 means the "
+"filament does not support to print on the Textured PEI Plate"
+msgstr ""
+
 msgid "Initial layer"
 msgstr "First layer"
 
@@ -4721,6 +4749,11 @@ msgid ""
 msgstr ""
 "This is the bed temperature of the initial layer. A value of 0 means the "
 "filament does not support printing on the High Temp Plate."
+
+msgid ""
+"Bed temperature of the initial layer. Value 0 means the filament does not "
+"support to print on the Textured PEI Plate"
+msgstr ""
 
 msgid "Bed types supported by the printer"
 msgstr "Bed types supported by the printer"
@@ -5886,10 +5919,12 @@ msgstr ""
 "The final generated model has no seam."
 
 msgid ""
-"Record timelapse video of printing without showing toolhead. In this mode "
-"the toolhead docks near the excess chute at each layer change, and then a "
-"snapshot is taken with the chamber camera. When printing finishes a "
-"timelapse video is composed of all the snapshots."
+"If enabled, a timelapse video will be generated for each print. After each "
+"layer is printed, the toolhead will move to the excess chute, and then a "
+"snapshot is taken with the chamber camera. All of these snapshots are "
+"composed into a timelapse video when printing completes. Since the melt "
+"filament may leak from the nozzle during the process of taking a snapshot, "
+"prime tower is required for nozzle priming."
 msgstr ""
 
 msgid "Temperature variation"
@@ -6054,12 +6089,8 @@ msgstr "Independent support layer height"
 
 msgid ""
 "Support layer uses layer height independent with object layer. This is to "
-"support custom support gap,but may cause extra filament switches if support "
-"is specified as different extruder with object"
+"support customizing z-gap and save print time."
 msgstr ""
-"The support layer uses layer height independent of object layers. This is to "
-"support custom support gaps, but may cause extra filament switches if "
-"support is specified as a different extruder from the object."
 
 msgid "Threshold angle"
 msgstr "Threshold angle"
@@ -6473,7 +6504,6 @@ msgstr "Support: propagate branches at layer %d"
 #~ msgid "Translation"
 #~ msgstr "Translation"
 
-#, c-format, boost-format
 #~ msgid ""
 #~ "It seems object %s needs support to print. Please enable support "
 #~ "generation."
