--- a/bbl/i18n/es/BambuStudio_es.po
+++ b/bbl/i18n/es/BambuStudio_es.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-08-19 14:51+0800\n"
+"POT-Creation-Date: 2022-08-24 18:21+0800\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2896,6 +2896,12 @@ msgstr "Será mejor que actualices tu software.\n"
 msgid "Newer 3mf version"
 msgstr "Nueva versión 3mf"
 
+#, c-format, boost-format
+msgid ""
+"The 3mf's version %s is newer than %s's version %s, Suggest to upgrade your "
+"software.\n"
+msgstr ""
+
 msgid "The 3mf is not compatible, load geometry data only!"
 msgstr ""
 
@@ -3598,6 +3604,15 @@ msgid "Delete this preset"
 msgstr "Borra este ajuste"
 
 msgid ""
+"Prime tower is required by timeplase. Are you sure you want to disable both "
+"of them?"
+msgstr ""
+
+msgid ""
+"Prime tower is required by timelapse. Do you want to enable both of them?"
+msgstr ""
+
+msgid ""
 "When recording timelapse without toolhead, it is recommended to add a "
 "\"Timelapse Wipe Tower\" \n"
 "by right-click the empty position of build plate and choose \"Add Primitive"
@@ -3744,6 +3759,14 @@ msgstr ""
 "Esta es la temperatura de la cama cuando la placa de alta temperatura está "
 "instalada. Un valor de 0 significa que el filamento no admite la impresión "
 "en la placa de alta temperatura."
+
+msgid "Textured PEI Plate"
+msgstr ""
+
+msgid ""
+"Bed temperature when Textured PEI Plate is installed. Value 0 means the "
+"filament does not support to print on the Textured PEI Plate"
+msgstr ""
 
 msgid "Volumetric speed limitation"
 msgstr "Limitación de la velocidad volumétrica"
@@ -4787,6 +4810,11 @@ msgstr ""
 "valor de 0 significa que el filamento no admite la impresión en la placa de "
 "alta temperatura."
 
+msgid ""
+"Bed temperature for layers except the initial one. Value 0 means the "
+"filament does not support to print on the Textured PEI Plate"
+msgstr ""
+
 msgid "Initial layer"
 msgstr "Capa inicial"
 
@@ -4814,6 +4842,11 @@ msgstr ""
 "Esta es la temperatura de la cama de la capa inicial. Un valor de 0 "
 "significa que el filamento no admite la impresión en la placa de alta "
 "temperatura."
+
+msgid ""
+"Bed temperature of the initial layer. Value 0 means the filament does not "
+"support to print on the Textured PEI Plate"
+msgstr ""
 
 msgid "Bed types supported by the printer"
 msgstr "Tipos de cama que admite la impresora"
@@ -6007,15 +6040,13 @@ msgstr ""
 "sólidas. El modelo final generado no tiene costura"
 
 msgid ""
-"Record timelapse video of printing without showing toolhead. In this mode "
-"the toolhead docks near the excess chute at each layer change, and then a "
-"snapshot is taken with the chamber camera. When printing finishes a "
-"timelapse video is composed of all the snapshots."
+"If enabled, a timelapse video will be generated for each print. After each "
+"layer is printed, the toolhead will move to the excess chute, and then a "
+"snapshot is taken with the chamber camera. All of these snapshots are "
+"composed into a timelapse video when printing completes. Since the melt "
+"filament may leak from the nozzle during the process of taking a snapshot, "
+"prime tower is required for nozzle priming."
 msgstr ""
-"Record timelapse video of printing without showing the toolhead. In this "
-"mode the toolhead docks near the excess chute at each layer change, and then "
-"a snapshot is taken with the chamber camera. When printing finishes, a "
-"timelapse video is created from all the snapshots."
 
 msgid "Temperature variation"
 msgstr "Variación de temperatura"
@@ -6181,13 +6212,8 @@ msgstr "Altura de la capa de soporte independiente"
 
 msgid ""
 "Support layer uses layer height independent with object layer. This is to "
-"support custom support gap,but may cause extra filament switches if support "
-"is specified as different extruder with object"
+"support customizing z-gap and save print time."
 msgstr ""
-"La capa de soporte utiliza la altura de la capa independientemente de la "
-"capa del objeto. Esto es para soportar la brecha de soporte personalizada, "
-"pero puede causar cambios de filamento adicionales si el soporte se "
-"especifica como un extrusor diferente con el objeto"
 
 msgid "Threshold angle"
 msgstr "Ángulo de umbral"
@@ -6613,7 +6639,6 @@ msgstr "Soporte: propagar ramas en la capa %d"
 #~ msgid "Translation"
 #~ msgstr "Translación"
 
-#, c-format, boost-format
 #~ msgid ""
 #~ "It seems object %s needs support to print. Please enable support "
 #~ "generation."
