--- a/bbl/i18n/hu/BambuStudio_hu.po
+++ b/bbl/i18n/hu/BambuStudio_hu.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-08-19 14:51+0800\n"
+"POT-Creation-Date: 2022-08-24 18:21+0800\n"
 "Language: hu\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2891,6 +2891,12 @@ msgstr "You'd better upgrade your software.\n"
 msgid "Newer 3mf version"
 msgstr "Newer 3mf version"
 
+#, c-format, boost-format
+msgid ""
+"The 3mf's version %s is newer than %s's version %s, Suggest to upgrade your "
+"software.\n"
+msgstr ""
+
 msgid "The 3mf is not compatible, load geometry data only!"
 msgstr ""
 
@@ -3577,6 +3583,15 @@ msgid "Delete this preset"
 msgstr "Ezen beállítás törlése"
 
 msgid ""
+"Prime tower is required by timeplase. Are you sure you want to disable both "
+"of them?"
+msgstr ""
+
+msgid ""
+"Prime tower is required by timelapse. Do you want to enable both of them?"
+msgstr ""
+
+msgid ""
 "When recording timelapse without toolhead, it is recommended to add a "
 "\"Timelapse Wipe Tower\" \n"
 "by right-click the empty position of build plate and choose \"Add Primitive"
@@ -3720,6 +3735,14 @@ msgstr ""
 "Asztalhőmérséklet a magas hőmérsékletű tálca használatával. A 0 érték azt "
 "jelenti, hogy a filament nem támogatja a High Temp Plate-re történő "
 "nyomtatást"
+
+msgid "Textured PEI Plate"
+msgstr ""
+
+msgid ""
+"Bed temperature when Textured PEI Plate is installed. Value 0 means the "
+"filament does not support to print on the Textured PEI Plate"
+msgstr ""
 
 msgid "Volumetric speed limitation"
 msgstr "Volumetrikus sebességhatár"
@@ -4761,6 +4784,11 @@ msgstr ""
 "Az asztal hőmérséklete a kezdeti réteg kivételével. A 0 érték azt jelenti, "
 "hogy a szál nem támogatja a High Temp Plate-re történő nyomtatást"
 
+msgid ""
+"Bed temperature for layers except the initial one. Value 0 means the "
+"filament does not support to print on the Textured PEI Plate"
+msgstr ""
+
 msgid "Initial layer"
 msgstr "Kezdőréteg"
 
@@ -4787,6 +4815,11 @@ msgid ""
 msgstr ""
 "A kezdőréteg asztalhőmérséklete. A 0 érték azt jelenti, hogy a filament nem "
 "támogatja a High Temp Plate-re történő nyomtatást"
+
+msgid ""
+"Bed temperature of the initial layer. Value 0 means the filament does not "
+"support to print on the Textured PEI Plate"
+msgstr ""
 
 msgid "Bed types supported by the printer"
 msgstr "Nyomtató által támogatott asztaltípusok"
@@ -5977,16 +6010,13 @@ msgstr ""
 "varratok"
 
 msgid ""
-"Record timelapse video of printing without showing toolhead. In this mode "
-"the toolhead docks near the excess chute at each layer change, and then a "
-"snapshot is taken with the chamber camera. When printing finishes a "
-"timelapse video is composed of all the snapshots."
+"If enabled, a timelapse video will be generated for each print. After each "
+"layer is printed, the toolhead will move to the excess chute, and then a "
+"snapshot is taken with the chamber camera. All of these snapshots are "
+"composed into a timelapse video when printing completes. Since the melt "
+"filament may leak from the nozzle during the process of taking a snapshot, "
+"prime tower is required for nozzle priming."
 msgstr ""
-"Timelapse videófelvétel készítése a nyomtatásról a nyomtatófej megjelenítése "
-"nélkül. Ebben az üzemmódban a nyomtatófej minden rétegváltásnál kiáll a "
-"felesleges anyagot kidobó nyílás közelében, majd a kamerával "
-"pillanatfelvétel készül. A nyomtatás befejezésekor egy timelapse videó áll "
-"össze az összes pillanatfelvételből."
 
 msgid "Temperature variation"
 msgstr "Temperature variation"
@@ -6151,12 +6181,8 @@ msgstr "Független támasz rétegmagassága"
 
 msgid ""
 "Support layer uses layer height independent with object layer. This is to "
-"support custom support gap,but may cause extra filament switches if support "
-"is specified as different extruder with object"
+"support customizing z-gap and save print time."
 msgstr ""
-"The support layer uses layer height independent of object layers. This is to "
-"support custom support gaps, but may cause extra filament switches if "
-"support is specified as a different filament from the object."
 
 msgid "Threshold angle"
 msgstr "Dőlésszög küszöbértéke"
@@ -6573,7 +6599,6 @@ msgstr "Support: propagate branches at layer %d"
 #~ msgid "Translation"
 #~ msgstr "Translation"
 
-#, c-format, boost-format
 #~ msgid ""
 #~ "It seems object %s needs support to print. Please enable support "
 #~ "generation."
