--- a/bbl/i18n/nl/BambuStudio_nl.po
+++ b/bbl/i18n/nl/BambuStudio_nl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-08-19 14:51+0800\n"
+"POT-Creation-Date: 2022-08-24 18:21+0800\n"
 "Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2896,6 +2896,12 @@ msgstr "U dient de software te upgraden.\n"
 msgid "Newer 3mf version"
 msgstr "Nieuwere versie 3mf"
 
+#, c-format, boost-format
+msgid ""
+"The 3mf's version %s is newer than %s's version %s, Suggest to upgrade your "
+"software.\n"
+msgstr ""
+
 msgid "The 3mf is not compatible, load geometry data only!"
 msgstr ""
 
@@ -3597,6 +3603,15 @@ msgid "Delete this preset"
 msgstr "Verwijder deze voorinstelling"
 
 msgid ""
+"Prime tower is required by timeplase. Are you sure you want to disable both "
+"of them?"
+msgstr ""
+
+msgid ""
+"Prime tower is required by timelapse. Do you want to enable both of them?"
+msgstr ""
+
+msgid ""
 "When recording timelapse without toolhead, it is recommended to add a "
 "\"Timelapse Wipe Tower\" \n"
 "by right-click the empty position of build plate and choose \"Add Primitive"
@@ -3742,6 +3757,14 @@ msgstr ""
 "Dit is de bedtemperatuur wanneer de hogetemperatuurplaat is geïnstalleerd. "
 "Een waarde van 0 betekent dat het filament printen op de High Temp Plate "
 "niet ondersteunt."
+
+msgid "Textured PEI Plate"
+msgstr ""
+
+msgid ""
+"Bed temperature when Textured PEI Plate is installed. Value 0 means the "
+"filament does not support to print on the Textured PEI Plate"
+msgstr ""
 
 msgid "Volumetric speed limitation"
 msgstr "Volumetrische snelheidsbeperking"
@@ -4791,6 +4814,11 @@ msgstr ""
 "Dit is de bedtemperatuur voor lagen, behalve voor de eerste. Een waarde van "
 "0 betekent dat het filament printen op de High Temp Plate niet ondersteunt."
 
+msgid ""
+"Bed temperature for layers except the initial one. Value 0 means the "
+"filament does not support to print on the Textured PEI Plate"
+msgstr ""
+
 msgid "Initial layer"
 msgstr "Eerste laag"
 
@@ -4817,6 +4845,11 @@ msgid ""
 msgstr ""
 "Dit is de bedtemperatuur van de beginlaag. Een waarde van 0 betekent dat het "
 "filament printen op de High Temp Plate niet ondersteunt."
+
+msgid ""
+"Bed temperature of the initial layer. Value 0 means the filament does not "
+"support to print on the Textured PEI Plate"
+msgstr ""
 
 msgid "Bed types supported by the printer"
 msgstr "Printbedden ondersteund door de printer"
@@ -6019,15 +6052,13 @@ msgstr ""
 "met solide onderlagen. Het uiteindelijke gegenereerde model heeft geen naad."
 
 msgid ""
-"Record timelapse video of printing without showing toolhead. In this mode "
-"the toolhead docks near the excess chute at each layer change, and then a "
-"snapshot is taken with the chamber camera. When printing finishes a "
-"timelapse video is composed of all the snapshots."
+"If enabled, a timelapse video will be generated for each print. After each "
+"layer is printed, the toolhead will move to the excess chute, and then a "
+"snapshot is taken with the chamber camera. All of these snapshots are "
+"composed into a timelapse video when printing completes. Since the melt "
+"filament may leak from the nozzle during the process of taking a snapshot, "
+"prime tower is required for nozzle priming."
 msgstr ""
-"Record timelapse video of printing without showing the toolhead. In this "
-"mode the toolhead docks near the excess chute at each layer change, and then "
-"a snapshot is taken with the chamber camera. When printing finishes, a "
-"timelapse video is created from all the snapshots."
 
 msgid "Temperature variation"
 msgstr "Temperatuur variatie"
@@ -6197,13 +6228,8 @@ msgstr "Onafhankelijke support laaghoogte"
 
 msgid ""
 "Support layer uses layer height independent with object layer. This is to "
-"support custom support gap,but may cause extra filament switches if support "
-"is specified as different extruder with object"
+"support customizing z-gap and save print time."
 msgstr ""
-"De ondersteuningslaag (support layer) gebruikt een laaghoogte onafhankelijk "
-"van objectlagen. Dit is ter ondersteuning van aangepaste "
-"ondersteuningsgaten, maar kan extra filamentwisselingen veroorzaken indien "
-"ondersteuning is gespecificeerd als een ander filament dan het object."
 
 msgid "Threshold angle"
 msgstr "Drempel hoek"
@@ -6631,7 +6657,6 @@ msgstr "Support: propagate branches at layer %d"
 #~ msgid "Translation"
 #~ msgstr "Vertaling"
 
-#, c-format, boost-format
 #~ msgid ""
 #~ "It seems object %s needs support to print. Please enable support "
 #~ "generation."
