--- a/bbl/i18n/de/BambuStudio_de.po
+++ b/bbl/i18n/de/BambuStudio_de.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-08-19 14:51+0800\n"
+"POT-Creation-Date: 2022-08-24 18:21+0800\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2897,6 +2897,12 @@ msgstr "Sie sollten Ihre Software aktualisieren.\n"
 msgid "Newer 3mf version"
 msgstr "Neuere 3mf-Version"
 
+#, c-format, boost-format
+msgid ""
+"The 3mf's version %s is newer than %s's version %s, Suggest to upgrade your "
+"software.\n"
+msgstr ""
+
 msgid "The 3mf is not compatible, load geometry data only!"
 msgstr ""
 
@@ -3601,6 +3607,15 @@ msgid "Delete this preset"
 msgstr "Lösche diese Voreinstellung"
 
 msgid ""
+"Prime tower is required by timeplase. Are you sure you want to disable both "
+"of them?"
+msgstr ""
+
+msgid ""
+"Prime tower is required by timelapse. Do you want to enable both of them?"
+msgstr ""
+
+msgid ""
 "When recording timelapse without toolhead, it is recommended to add a "
 "\"Timelapse Wipe Tower\" \n"
 "by right-click the empty position of build plate and choose \"Add Primitive"
@@ -3747,6 +3762,14 @@ msgstr ""
 "Dies ist die Betttemperatur, wenn die Hochtemperaturdruckplatte installiert "
 "ist. Ein Wert von 0 bedeutet, dass das Filament das Drucken auf der "
 "Hochtemperaturdruckplatte nicht unterstützt."
+
+msgid "Textured PEI Plate"
+msgstr ""
+
+msgid ""
+"Bed temperature when Textured PEI Plate is installed. Value 0 means the "
+"filament does not support to print on the Textured PEI Plate"
+msgstr ""
 
 msgid "Volumetric speed limitation"
 msgstr "Volumetrische Geschwindigkeitsbegrenzung"
@@ -4799,6 +4822,11 @@ msgstr ""
 "von 0 bedeutet, dass das Filament das Drucken auf der "
 "Hochtemperaturdruckplatte nicht unterstützt."
 
+msgid ""
+"Bed temperature for layers except the initial one. Value 0 means the "
+"filament does not support to print on the Textured PEI Plate"
+msgstr ""
+
 msgid "Initial layer"
 msgstr "Erste Schicht"
 
@@ -4827,6 +4855,11 @@ msgstr ""
 "Dies ist die Betttemperatur der Ausgangsschicht. Ein Wert von 0 bedeutet, "
 "dass das Filament das Drucken auf der Hochtemperaturdruckplatte nicht "
 "unterstützt."
+
+msgid ""
+"Bed temperature of the initial layer. Value 0 means the filament does not "
+"support to print on the Textured PEI Plate"
+msgstr ""
 
 msgid "Bed types supported by the printer"
 msgstr "Vom Drucker unterstützte Druckbettypen"
@@ -6018,15 +6051,13 @@ msgstr ""
 "endgültig erzeugte Modell hat keine Naht"
 
 msgid ""
-"Record timelapse video of printing without showing toolhead. In this mode "
-"the toolhead docks near the excess chute at each layer change, and then a "
-"snapshot is taken with the chamber camera. When printing finishes a "
-"timelapse video is composed of all the snapshots."
+"If enabled, a timelapse video will be generated for each print. After each "
+"layer is printed, the toolhead will move to the excess chute, and then a "
+"snapshot is taken with the chamber camera. All of these snapshots are "
+"composed into a timelapse video when printing completes. Since the melt "
+"filament may leak from the nozzle during the process of taking a snapshot, "
+"prime tower is required for nozzle priming."
 msgstr ""
-"Record timelapse video of printing without showing the toolhead. In this "
-"mode the toolhead docks near the excess chute at each layer change, and then "
-"a snapshot is taken with the chamber camera. When printing finishes, a "
-"timelapse video is created from all the snapshots."
 
 msgid "Temperature variation"
 msgstr "Temperaturvariation"
@@ -6193,13 +6224,8 @@ msgstr "Unabhängige Support-Schichthöhe"
 
 msgid ""
 "Support layer uses layer height independent with object layer. This is to "
-"support custom support gap,but may cause extra filament switches if support "
-"is specified as different extruder with object"
+"support customizing z-gap and save print time."
 msgstr ""
-"Die Support-Schicht verwendet eine von der Objektschicht unabhängige "
-"Schichthöhe. Dies dient der Unterstützung benutzerdefinierter Supportlücken, "
-"kann aber zusätzliche Filamentwechsel verursachen, wenn die Supportschicht "
-"von einem anderen Filament gedruckt wird"
 
 msgid "Threshold angle"
 msgstr "Schwellenwinkel"
@@ -6629,7 +6655,6 @@ msgstr "Support: Verbreiten von Zweigen auf Ebene %d"
 #~ msgid "Translation"
 #~ msgstr "Übersetzung"
 
-#, c-format, boost-format
 #~ msgid ""
 #~ "It seems object %s needs support to print. Please enable support "
 #~ "generation."
