--- a/bbl/i18n/fr/BambuStudio_fr.po
+++ b/bbl/i18n/fr/BambuStudio_fr.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-08-19 14:51+0800\n"
+"POT-Creation-Date: 2022-08-24 18:21+0800\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2859,6 +2859,12 @@ msgstr "Vous feriez mieux de mettre à jour votre logiciel.\n"
 msgid "Newer 3mf version"
 msgstr "Nouvelle version 3mf"
 
+#, c-format, boost-format
+msgid ""
+"The 3mf's version %s is newer than %s's version %s, Suggest to upgrade your "
+"software.\n"
+msgstr ""
+
 msgid "The 3mf is not compatible, load geometry data only!"
 msgstr ""
 
@@ -3558,6 +3564,15 @@ msgid "Delete this preset"
 msgstr "Supprimer ce préréglage"
 
 msgid ""
+"Prime tower is required by timeplase. Are you sure you want to disable both "
+"of them?"
+msgstr ""
+
+msgid ""
+"Prime tower is required by timelapse. Do you want to enable both of them?"
+msgstr ""
+
+msgid ""
 "When recording timelapse without toolhead, it is recommended to add a "
 "\"Timelapse Wipe Tower\" \n"
 "by right-click the empty position of build plate and choose \"Add Primitive"
@@ -3698,6 +3713,14 @@ msgstr ""
 "This is the bed temperature when the high temperature plate is installed. A "
 "value of 0 means the filament does not support printing on the High Temp "
 "Plate."
+
+msgid "Textured PEI Plate"
+msgstr ""
+
+msgid ""
+"Bed temperature when Textured PEI Plate is installed. Value 0 means the "
+"filament does not support to print on the Textured PEI Plate"
+msgstr ""
 
 msgid "Volumetric speed limitation"
 msgstr "Limitation de vitesse volumétrique"
@@ -4748,6 +4771,11 @@ msgstr ""
 "This is the bed temperature for layers except for the first one. A value of "
 "0 means the filament does not support printing on the High Temp Plate."
 
+msgid ""
+"Bed temperature for layers except the initial one. Value 0 means the "
+"filament does not support to print on the Textured PEI Plate"
+msgstr ""
+
 msgid "Initial layer"
 msgstr "Couche initiale"
 
@@ -4774,6 +4802,11 @@ msgid ""
 msgstr ""
 "This is the bed temperature of the first layer. A value of 0 means the "
 "filament does not support printing on the High Temp Plate."
+
+msgid ""
+"Bed temperature of the initial layer. Value 0 means the filament does not "
+"support to print on the Textured PEI Plate"
+msgstr ""
 
 msgid "Bed types supported by the printer"
 msgstr "Types de lit pris en charge par l'imprimante"
@@ -5975,15 +6008,13 @@ msgstr ""
 "solides. Le modèle généré final n'a pas de couture"
 
 msgid ""
-"Record timelapse video of printing without showing toolhead. In this mode "
-"the toolhead docks near the excess chute at each layer change, and then a "
-"snapshot is taken with the chamber camera. When printing finishes a "
-"timelapse video is composed of all the snapshots."
+"If enabled, a timelapse video will be generated for each print. After each "
+"layer is printed, the toolhead will move to the excess chute, and then a "
+"snapshot is taken with the chamber camera. All of these snapshots are "
+"composed into a timelapse video when printing completes. Since the melt "
+"filament may leak from the nozzle during the process of taking a snapshot, "
+"prime tower is required for nozzle priming."
 msgstr ""
-"Record timelapse video of printing without showing the toolhead. In this "
-"mode the toolhead docks near the excess chute at each layer change, and then "
-"a snapshot is taken with the chamber camera. When printing finishes, a "
-"timelapse video is created from all the snapshots."
 
 msgid "Temperature variation"
 msgstr "Variation de température"
@@ -6150,13 +6181,8 @@ msgstr "Hauteur de la couche de support indépendante"
 
 msgid ""
 "Support layer uses layer height independent with object layer. This is to "
-"support custom support gap,but may cause extra filament switches if support "
-"is specified as different extruder with object"
+"support customizing z-gap and save print time."
 msgstr ""
-"La couche de support utilise une hauteur de couche indépendante de la couche "
-"d'objet. Il s'agit de prendre en charge l'écart de support personnalisé, "
-"mais cela peut entraîner des commutateurs de filament supplémentaires si le "
-"support est spécifié comme extrudeuse différente avec l'objet"
 
 msgid "Threshold angle"
 msgstr "Angle de seuil"
@@ -6582,7 +6608,6 @@ msgstr "Support: propagate branches at layer %d"
 #~ msgid "Translation"
 #~ msgstr "Traduction"
 
-#, c-format, boost-format
 #~ msgid ""
 #~ "It seems object %s needs support to print. Please enable support "
 #~ "generation."
