--- a/bbl/i18n/zh_cn/BambuStudio_zh_CN.po
+++ b/bbl/i18n/zh_cn/BambuStudio_zh_CN.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Slic3rPE\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-08-19 14:51+0800\n"
+"POT-Creation-Date: 2022-08-24 18:21+0800\n"
 "PO-Revision-Date: 2022-08-07 21:57+0800\n"
 "Last-Translator: Jiang Yue <maze1024@gmail.com>\n"
 "Language-Team: \n"
@@ -2800,6 +2800,12 @@ msgstr "建议升级您的软件版本。\n"
 msgid "Newer 3mf version"
 msgstr "较新的3mf版本"
 
+#, c-format, boost-format
+msgid ""
+"The 3mf's version %s is newer than %s's version %s, Suggest to upgrade your "
+"software.\n"
+msgstr ""
+
 msgid "The 3mf is not compatible, load geometry data only!"
 msgstr ""
 
@@ -3471,6 +3477,15 @@ msgid "Delete this preset"
 msgstr "删除此预设"
 
 msgid ""
+"Prime tower is required by timeplase. Are you sure you want to disable both "
+"of them?"
+msgstr "延时摄影需要使用擦拭塔，是否同时禁用？"
+
+msgid ""
+"Prime tower is required by timelapse. Do you want to enable both of them?"
+msgstr "延时摄影需要使用擦拭塔，是否同时启用？"
+
+msgid ""
 "When recording timelapse without toolhead, it is recommended to add a "
 "\"Timelapse Wipe Tower\" \n"
 "by right-click the empty position of build plate and choose \"Add Primitive"
@@ -3601,6 +3616,14 @@ msgid ""
 "Bed temperature when high temperature plate is installed. Value 0 means the "
 "filament does not support to print on the High Temp Plate"
 msgstr "安装高温打印热床时的热床温度。0值表示这个耗材丝不支持高温打印热床"
+
+msgid "Textured PEI Plate"
+msgstr "纹理PEI热床"
+
+msgid ""
+"Bed temperature when Textured PEI Plate is installed. Value 0 means the "
+"filament does not support to print on the Textured PEI Plate"
+msgstr "安装纹理PEI热床时的热床温度。0值表示这个耗材丝不支持纹理PEI热床"
 
 msgid "Volumetric speed limitation"
 msgstr "体积速度限制"
@@ -4574,6 +4597,11 @@ msgid ""
 "filament does not support to print on the High Temp Plate"
 msgstr "非首层热床温度。0值表示这个耗材丝不支持高温打印热床"
 
+msgid ""
+"Bed temperature for layers except the initial one. Value 0 means the "
+"filament does not support to print on the Textured PEI Plate"
+msgstr "非首层热床温度。0值表示这个耗材丝不支持低温打印热床"
+
 msgid "Initial layer"
 msgstr "首层"
 
@@ -4594,6 +4622,11 @@ msgid ""
 "Bed temperature of the initial layer. Value 0 means the filament does not "
 "support to print on the High Temp Plate"
 msgstr "首层热床温度。0值表示这个耗材丝不支持高温打印热床"
+
+msgid ""
+"Bed temperature of the initial layer. Value 0 means the filament does not "
+"support to print on the Textured PEI Plate"
+msgstr "首层热床温度。0值表示这个耗材丝不支持纹理PEI热床"
 
 msgid "Bed types supported by the printer"
 msgstr "打印机所支持的热床类型"
@@ -5659,13 +5692,17 @@ msgstr ""
 "印。最后生成的打印件没有接缝。"
 
 msgid ""
-"Record timelapse video of printing without showing toolhead. In this mode "
-"the toolhead docks near the excess chute at each layer change, and then a "
-"snapshot is taken with the chamber camera. When printing finishes a "
-"timelapse video is composed of all the snapshots."
+"If enabled, a timelapse video will be generated for each print. After each "
+"layer is printed, the toolhead will move to the excess chute, and then a "
+"snapshot is taken with the chamber camera. All of these snapshots are "
+"composed into a timelapse video when printing completes. Since the melt "
+"filament may leak from the nozzle during the process of taking a snapshot, "
+"prime tower is required for nozzle priming."
 msgstr ""
-"录制打印的延时摄影视频，但不显示工具头。在该模式下，工具头会在换层时停靠在吐"
-"料槽附近，然后用内置相机拍摄快照。打印完成后，把所有快照组成延时摄影视频。"
+"如果启用延时摄影，将在每次打印时生成延时摄影视频。打印完每层后，工具头将移动"
+"到吐料槽，然后用内置相机拍摄快照。打印完成后，所有这些快照会组合成一个延时视"
+"频。由于在拍摄快照的过程中熔丝可能会从喷嘴中泄漏，因此需要使用擦拭塔进行喷嘴"
+"擦拭。"
 
 msgid "Temperature variation"
 msgstr "软化温度"
@@ -5818,11 +5855,8 @@ msgstr "支撑独立层高"
 
 msgid ""
 "Support layer uses layer height independent with object layer. This is to "
-"support custom support gap,but may cause extra filament switches if support "
-"is specified as different extruder with object"
+"support customizing z-gap and save print time."
 msgstr ""
-"支撑层使用独立于对象层的层高。这是为了支持自定义间隙，但是会在支撑和对象使用"
-"不同耗材丝的时候造成额外的耗材丝切换次数。"
 
 msgid "Threshold angle"
 msgstr "阈值角度"
@@ -6211,7 +6245,6 @@ msgstr "支撑：正在生长层%d的树枝"
 #~ msgid "Translation"
 #~ msgstr "翻译"
 
-#, c-format, boost-format
 #~ msgid ""
 #~ "It seems object %s needs support to print. Please enable support "
 #~ "generation."
