--- a/bbl/i18n/list.txt
+++ b/bbl/i18n/list.txt
@@ -12,6 +12,8 @@ src/slic3r/GUI/Gizmos/GLGizmoSimplify.cpp
 src/slic3r/GUI/Gizmos/GLGizmoFaceDetector.cpp
 src/slic3r/GUI/Gizmos/GLGizmoSeam.cpp
 src/slic3r/GUI/Gizmos/GLGizmoSeam.hpp
+src/slic3r/GUI/Gizmos/GLGizmoText.cpp
+src/slic3r/GUI/Gizmos/GLGizmoText.hpp
 src/slic3r/GUI/GUI.cpp
 src/slic3r/GUI/GUI_App.cpp
 src/slic3r/GUI/GUI_Init.cpp
